# space_colony

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  sitemap.xml
models/habitat_constraints/: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  fly.toml  pyproject.toml
models/habitat_constraints/experiments/: run_boundary_analysis.py  run_phase2_analysis.py  run_phase3_analysis.py  run_phase6_analysis.py
models/habitat_constraints/experiments/output/: phase6_results.json
models/habitat_constraints/src/habitat_constraints/: __init__.py
models/habitat_constraints/src/habitat_constraints/analysis/: monte_carlo.py  sensitivity.py
models/habitat_constraints/src/habitat_constraints/api/: __init__.py  main.py
models/habitat_constraints/src/habitat_constraints/constraints/: agriculture.py  atmosphere.py  coriolis.py  cross_coupling.py  cylinder_length.py  energy.py  gravity_gradient.py  gravity_level.py  hoop_stress.py  micrometeorite.py  population.py  radiation.py  thermal.py  (+5 more)
models/habitat_constraints/tests/: conftest.py  test_monte_carlo.py  test_parameters.py  test_sensitivity.py  test_solver.py
models/habitat_constraints/tests/test_constraints/: test_agriculture.py  test_atmosphere.py  test_coriolis.py  test_cross_coupling.py  test_cylinder_length.py  test_energy.py  test_gravity_gradient.py  test_gravity_level.py  test_hoop_stress.py  test_micrometeorite.py  test_population.py  test_radiation.py  test_rim_speed.py  test_rotational_stability.py  test_spinup_energy.py  test_thermal.py  test_vestibular.py  test_water_recycling.py
(+152 files in other folders)
