[project]
name = "habitat-constraints"
version = "0.1.0"
description = "Parametric constraint model for O'Neill cylinder habitat design"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9,<3",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "coverage>=7.6",
    "black>=24.10",
    "flake8>=7.1",
    "mypy>=1.13",
    "pre-commit>=3.8",
]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/habitat_constraints"]

[tool.black]
line-length = 89

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=habitat_constraints --cov-report=term-missing"

[tool.coverage.run]
source = ["habitat_constraints"]
